syntax = "proto3";

import "Protos/base.proto";
import "Protos/projeto.proto";
import "Protos/workflow.proto";
import "Protos/recurso.proto";
import "Protos/tipoTarefa.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Cpnucleo.RazorPages.Protos.TarefaProto";

package tarefa;

service TarefaProto {

	rpc Incluir (TarefaModel) returns (TarefaModel);
	rpc Listar (google.protobuf.Empty) returns (ListarReply);
	rpc Consultar (base.BaseRequest) returns (TarefaModel);
	rpc Alterar (TarefaModel) returns (base.BaseReply);
	rpc Remover (base.BaseRequest) returns (base.BaseReply);
	rpc ListarPorRecurso (base.BaseRequest) returns (ListarPorRecursoReply);
	rpc AlterarPorWorkflow (AlterarPorWorkflowRequest) returns (base.BaseReply);
}

message TarefaModel {

	string Id = 1;
	string Nome = 2;
	string DataInicio = 3;
	string DataTermino = 4;
	int32 QtdHoras = 5;
	google.protobuf.StringValue Detalhe = 6;
	int32 HorasConsumidas = 7;
	int32 HorasRestantes = 8;
	string IdProjeto = 9;
	string IdWorkflow = 10;
	string IdRecurso = 11;
	string IdTipoTarefa = 12;
	string DataInclusao = 13;
	projeto.ProjetoModel Projeto = 14;
	workflow.WorkflowModel Workflow = 15;
	recurso.RecursoModel Recurso = 16;
	tipoTarefa.TipoTarefaModel TipoTarefa = 17;
}

message AlterarPorWorkflowRequest {

	string idTarefa = 1;
	string idWorkflow = 2;
} 

message ListarReply {

    repeated TarefaModel Lista = 1;
}

message ListarPorRecursoReply {

    repeated TarefaModel Lista = 1;
}